[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "markdown-crawler"
version = "0.0.8"
authors = [
  { name="Paul Pierre", email="hi@paulpierre.com" },
]
description = "A multithreaded ðŸ•¸ï¸ web crawler that recursively crawls a website and creates a ðŸ”½ markdown file for each page"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "bs4>=0.0.2",
    "markdownify>=1.1.0",
    "requests>=2.25.1",
    "playwright>=1.40.0",
]

[project.urls]
"Homepage" = "https://github.com/paulpierre/markdown-crawler"
"Bug Tracker" = "https://github.com/paulpierre/markdown-crawler/issues"
"Twitter" = "https://twitter.com/paulpierre"

[project.scripts]
markdown-crawler = "markdown_crawler.cli:main"
